docs, service: add swagger ui, clean some dead code
